--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/workspace.xml
 .idea/jQuery_dsDataTableGrid.iml
 .idea/modules.xml
+.idea/encodings.xml
 .idea/vcs.xml
 .idea/.name
 .idea/misc.xml
